<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentUploadPanConfirmation">

    <FrameLayout
        android:id="@+id/fl_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/btn_final_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toTopOf="@id/btn_final_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_upload_soft_copy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="40dp"
                    android:background="@color/screen_background"
                    android:paddingBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/tv_upload_soft_copy_msg"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/opensans_extrabold"
                            android:paddingHorizontal="20dp"
                            android:text="@string/upload_soft_copy_of_director_s_personal_pan_card"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_upload_doc_desc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/opensans_medium"
                            android:paddingHorizontal="20dp"
                            android:text="@string/upload_desc"
                            android:textColor="@color/text_color_light"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="@id/tv_upload_soft_copy_msg"
                            app:layout_constraintStart_toStartOf="@id/tv_upload_soft_copy_msg"
                            app:layout_constraintTop_toBottomOf="@id/tv_upload_soft_copy_msg" />

                        <ImageView
                            android:id="@+id/img_selected"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/selected_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_upload_doc_desc" />

                        <TextView
                            android:id="@+id/btn_remove"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/to_upload_a_different_pan_click_here"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/img_selected" />

                        <TextView
                            android:id="@+id/tv_pan_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/pan"
                            android:textColor="@color/_272727"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btn_remove" />

                        <EditText
                            android:id="@+id/edt_text_pan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="10dp"
                            android:background="#FBEEFE"
                            android:hint="@string/enter_pan_number"
                            android:padding="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_pan_label" />

                        <TextView
                            android:id="@+id/tv_address_you"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/how_can_we_address_you"
                            android:textColor="@color/_272727"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/edt_text_pan" />

                        <EditText
                            android:id="@+id/edt_text_address_you"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="10dp"
                            android:background="#FBEEFE"
                            android:hint="@string/enter_pan_number"
                            android:padding="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_address_you" />

                        <TextView
                            android:id="@+id/tv_aadhar_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/aadhaar_card"
                            android:textColor="@color/_272727"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/edt_text_address_you" />

                        <EditText
                            android:id="@+id/edt_text_aadhar_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="10dp"
                            android:background="#FBEEFE"
                            android:hint="@string/enter_pan_number"
                            android:padding="12dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_aadhar_card" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>

    <TextView
        android:id="@+id/btn_final_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/purple_baclground_rectangle"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/verify_aadhaar"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>