<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_kyc_declaration_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".FragmentKYCDeclaration">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_complete_your_kyc_declaration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_view_kyc_declaration"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_complete_your_kyc_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/opensans_extrabold"
                android:gravity="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_keep_handy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/text_purple"
                app:cardCornerRadius="20dp"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/tv_complete_your_kyc_text"
                app:layout_constraintStart_toStartOf="@id/tv_complete_your_kyc_text"
                app:layout_constraintTop_toBottomOf="@id/tv_complete_your_kyc_text" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_what_to_handy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/openwans_bold"
                        android:text="@string/what_to_keep_handy"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_business_pan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/business_pan"
                        android:drawablePadding="5dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_what_to_handy"
                        app:layout_constraintStart_toStartOf="@id/tv_what_to_handy"
                        app:drawableStartCompat="@drawable/baseline_check_circle_24" />

                    <TextView
                        android:id="@+id/tv_business_account_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/business_bank_account_number_and_ifsc_code"
                        android:drawablePadding="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_business_pan"
                        app:layout_constraintStart_toStartOf="@id/tv_what_to_handy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:drawableStartCompat="@drawable/baseline_check_circle_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_why_do_need_kyc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/text_purple"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@id/cv_keep_handy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/cv_keep_handy"
                app:layout_constraintTop_toBottomOf="@id/cv_keep_handy" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_why_need_kyc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/openwans_bold"
                        android:text="@string/why_do_we_need_kyc"
                        android:textSize="14sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tv_rbi_mandate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/rbi_mandate_msg"
                        android:drawablePadding="5dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_why_need_kyc"
                        app:layout_constraintStart_toStartOf="@id/tv_why_need_kyc"
                        app:drawableStartCompat="@drawable/baseline_check_circle_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/check_box_kyc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:textSize="12sp"
        android:text="@string/kyc_declaratioin_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_complete_your_kyc_declaration"/>

    <TextView
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_and_continue"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:fontFamily="@font/opensans_medium"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/purple_baclground_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>